# plant_sales_app

./: PROJECT_EXPORT_20251201_185440.md  PROJECT_EXPORT_20251206_132901.md  PROJECT_EXPORT_20251207_163830.md  README.md  SMART_EXPORT_catalog_screen_20251215_165405.md  SMART_EXPORT_orders_screen_20251217_141055.md  advanced_documentation.py  docs_config.yaml  export_project_v1.py  full_history.txt  main.py  main_db_test.py  migrate_db.py  pyproject.toml  short_SMART_EXPORT_catalog_screen_20251207_180219.md  smart_export_full.py  smart_export_short.py
app/: README.txt
app/assets/: disease_classes.txt
app/assets/data/: disease_classes.txt  species_classes.txt
app/assets/database/: plant_protection.backup_20251206_135838.db  plant_protection.db
app/core/: config.py  database.py  database_backup.py  test_data.py
app/ml/: image_processor.py  inference.py  model_loader.py
app/ui/screens/: camera_screen.py  catalog_screen.py  disease_detection_screen.py  main_screen.py  orders_screen.py  results_screen.py  settings_screen.py  substance_editor.py
app/ui/widgets/: custom_buttons.py  image_widgets.py  substance_item.py
exports/: pesticides_export_20251217_155922.xlsx  pesticides_export_20260605_142957.xlsx
generated_docs/: PROJECT_DOCUMENTATION_v1.md  documentation_v1.json
generated_docs/diagrams/: module_dependencies_v1
